# jni-example

./: .gitignore  README.md  pom.xml
src/main/cpp/: CMakeLists.txt  basicCalc.cpp  basicCalc.h  ca_purpleowl_examples_jni_BasicJNIWrapper.cpp  ca_purpleowl_examples_jni_BasicJNIWrapper.h  simpleFunction.cpp  simpleFunction.h
src/main/java/ca/purpleowl/examples/jni/: BasicJNIWrapper.java
