cmake_minimum_required(VERSION 3.9)
project(cpp)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 11)
find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -m64")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../resources)
FILE(GLOB SOURCE_FILES *.cpp)
add_library(cpp SHARED ${SOURCE_FILES})
set_target_properties(cpp PROPERTIES SUFFIX ".dylib")